--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -25,12 +25,13 @@ section {
 	}
 	.title {
 		text-align: center;
-		margin:0 auto 8em;
+		margin:0 auto 5.6em;
 		display:block;
 	}
 	h3 {
 		font-size:3.6rem;
 		font-weight: 600;
+		padding:1.8rem;
 	}
 }
 //Splash Pag/
@@ -50,15 +51,23 @@ section {
 		width:550px;
 		margin:12% auto 0;
 		text-align: center;
-	}
-	.btn-anchor img{
+	.btn-anchor {
+		display:block;
+		padding:6rem 0 0;
+		span {
+			display:block;
+			font-size:1.4rem;
+			color:$color-aqua;
+		}
+	img{
 		height:56px;
 		width: 44px;
-		margin:2rem;
+		margin:1rem;
 		-webkit-animation: pulse 2s infinite;
     	animation: pulse 2s infinite;
 	}
-
+}
+}
 	ul {
 		text-align: center;
 		padding: 12px;
@@ -77,7 +86,7 @@ section {
 	}
 	p {
 		color:$color_aqua;
-		padding:2rem;
+		padding:1rem;
 	}
 		
 	.button {
@@ -88,23 +97,26 @@ section {
 //About Section
 
 #about {
-
 	.title {
-		background: url("img/img-jellyfish.png") no-repeat 800px;
-		background-size:190px;
-		background-position: 800px 78px;
+	.jellyfish {
+		width:150px;
+		height:auto;
+		-webkit-animation: pulse 5s infinite;
+    	animation: pulse 5s infinite;
+	}
 	}
 	article {
 		display: grid;
 		grid-template-columns: repeat(2, 50%);
 		grid-template-rows: repeat(2, 1fr);
-		grid-row-gap: 20rem;
+		grid-row-gap: 12rem;
 		grid-column-gap: 0;
 		grid-template-rows: auto auto;
 		img {
 			justify-self: end;
 			width:100%;
 			height:auto;
+			
 		}
 	}
 
@@ -126,7 +138,15 @@ section {
 }
 
 #portfolio {
-	background: url(img/img-mermaid.png) no-repeat -200px 0;
+	background: url(img/img-mermaid.png) no-repeat 10% 0;
+	background-size:400px auto;
+	animation: animatedBackground 20s linear ;
+	@keyframes animatedBackground {
+		from { background-position: 0 0; }
+		to { background-position: 10% 0; }
+	}
+
+
 	.grid {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
@@ -135,7 +155,7 @@ section {
 		grid-column-gap: 1rem;
 		.item {
 			background-color: $color_navy;
-			padding:3.2rem;
+			padding:3.2rem 3.2rem 2rem;
 			border-radius:4px;
 		}
 
@@ -147,7 +167,8 @@ section {
 		 img {
 			opacity: 90%;
 			height: auto;
-    		width: 100%;
+			width: 100%;
+			border-radius:6px;
 			&:hover {
 				opacity:100%;
 				@include ease;
@@ -164,15 +185,15 @@ section {
 		position: absolute;
 		right: -1000px;
 		top: 0;
+		-webkit-animation: pulse 4s infinite;
+    	animation: pulse 4s infinite;
 	}
 	.angler {
-		position: absolute;
-		left: 200px;
-		top: 0;
 		opacity: 30%;
-		width: 200px;
+		width: 170px;
 		height: auto;
-		opacity: 30%;
+		-webkit-animation: pulse 8s infinite;
+    	animation: pulse 8s infinite;
 	}
 	form {
 		margin:0 auto ;
@@ -183,7 +204,6 @@ section {
 			justify-content: space-between;
 		}
 		input {
-			line-height: 2em;	
 			border-radius: 4px;
 			padding:1rem;
 			color: $color-light-grey;
