--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -172,7 +172,7 @@
             }      
         }
         #mobileNav {
-            display: table;
+            display: flex;
             position: fixed;
             bottom: 0;
             left: 0;
@@ -185,7 +185,7 @@
                 background-color: $color_nav_mobi;
                 padding: 8px;
                 border-bottom: 1px solid $color_cape_cod;
-                font-size: 14px;
+                font-size: 12px;
                 text-align: center;
                 z-index: 5;
                 color: $color_link;
