--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -36,7 +36,7 @@
         section {
             padding:1.225em;
             height:auto;
-            margin: 3.2rem 0 ;
+            margin: 4.2rem 0 ;
             padding:0;
             text-align: center;
             article {
@@ -51,7 +51,7 @@
                 margin:0 0 3.2rem;
             }
             h3 {
-                font-size: 2.4rem;
+                font-size: 2.8rem;
                 line-height: 1.2em;
             }
             h4 {
@@ -71,7 +71,7 @@
             h1 {
                 line-height: 1.2em;
                 font-weight: 100;
-                font-size:2.4rem;
+                font-size:3.2rem;
                 padding: 2rem;
             }
 
@@ -148,6 +148,9 @@
                 top: 200px;
                 width: 700px;
                 height: auto;
+            }
+            .angler {
+                width: 120px;
             }
             background-position: 0 50px;
             background-size:120px;
