--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -38,6 +38,10 @@ section {
 		padding:1.8rem 0 0;
 	}
 }
+img.logo {
+	width:85px;
+	height: auto;
+}
 //Splash Pag/
 #home {
 	max-width: 100%;
@@ -47,10 +51,7 @@ section {
 	height: 100vh;
 	margin:0;
 	padding-top: 0;
-	img.logo {
-		width:85px;
-		height: auto;
-	}
+
 	article {
 		width:550px;
 		margin:12% auto 0;
@@ -183,6 +184,37 @@ section {
 //Contact Pages
 
 #contact {
+	.bio {
+		width:470px;
+		margin:0 auto 22px;
+		display: flex;
+		align-items: flex-start;
+		div {
+			margin:0 0 0 18px;
+			h4 {
+				padding:0;
+				font-size:2.4rem;
+			}
+		}
+	}
+	.soc-icons {
+		margin:0 auto 62px;
+		display: flex;
+		width:470px;
+		justify-content: space-between;
+		i {
+			color: $color_logo-bg;
+			font-size:2.4rem;
+			border: 1px solid $color_venice_blue;
+			border-radius: 50%;
+			border-radius: 50%;
+			padding: 18px;
+			width: 62px;
+			height: 62px;
+		text-align: center;
+		}
+
+	}
 	overflow: hidden;
 	margin-bottom: 0;
 	.octopus {
@@ -194,58 +226,33 @@ section {
 	}
 	.angler {
 		opacity: 30%;
-		width: 170px;
+		width: 150px;
 		height: auto;
 		-webkit-animation: pulse 8s infinite;
     	animation: pulse 8s infinite;
 	}
-	form {
-		margin:0 auto ;
-		width:500px;
-		text-align: left;
-		.flex-input {
-			display:flex;
-			justify-content: space-between;
-		}
-		input {
-			border-radius: 4px;
-			padding:1rem;
-			color: $color-light-grey;
-			width:220px;
-			background: #002950;
-			border: 1px solid $color_venice_blue
-		}
-		textarea {
-			width:480px;
-			padding: 1rem;
-			background: #002950;
-			border: 1px solid $color_venice_blue;
-			border-radius: 4px;
-			color: $color-light-grey;
-		}
-		label {
-			display:block;
-		}
-		button {
+	
+		.button {
 			display: block;
-			background: #002950;
 			color: #fff;
 			border: 1px solid $color_venice_blue;
-			border-radius: 30px;
 			text-align: center;
 			padding: 1rem 4.2rem;
-			cursor: pointer;
 			font-size:1.6rem;
-		}
-		span {
-			display: block;
-			margin: 1rem;
-			&.msg {
-				margin-bottom:30px;
+			width:260px;
+			font-weight: 200;
+			border-radius:6px;
+			margin: 0 auto;
+			&:hover {
+				background:$color_navy;
+			}
+			i {
+				padding:0 .5rem;
+				color: $color_logo-bg;
 			}
 		}
+
 	}
-}
 
 .lt {
 	h3, p {
