--- a/css/_type.scss
+++ b/css/_type.scss
@@ -15,8 +15,8 @@ h3 {
 }
 h4 {
 	@extend %extend_1;
-	padding:0 0 1.2em;
-	font-size: 3.2rem;
+	padding:0 ;
+	font-size: 2.4rem;
 }
 h5 {
 	@extend %extend_1;
