--- a/css/global.css
+++ b/css/global.css
@@ -104,30 +104,7 @@ article h3 {
   font-weight: 400;
 }
 
-.button {
-  width: 220px;
-  padding: 0.5em 0.225em 0.5em 0.5em;
-  margin: 0 auto;
-  text-align: center;
-  display: block;
-  font-weight: 600;
-  text-transform: uppercase;
-  background: #9FDAF2;
-  border-radius: 0.4em;
-  -webkit-transition: all .9s ease;
-  transition: all .9s ease;
-  -webkit-transition: all .5s ease;
-}
-
-.button:hover {
-  background: rgba(3, 84, 144, 0.9);
-}
-
-.button:hover .fas {
-  color: #fff;
-}
-
-.button .fas {
+.fas {
   color: #fff;
   font-size: 1.8rem;
   padding: 0 0 0 .225em;
@@ -179,8 +156,8 @@ h2 {
 }
 
 h4 {
-  padding: 0 0 1.2em;
-  font-size: 3.2rem;
+  padding: 0;
+  font-size: 2.4rem;
 }
 
 h5 {
@@ -387,6 +364,11 @@ section h3 {
   padding: 1.8rem 0 0;
 }
 
+img.logo {
+  width: 85px;
+  height: auto;
+}
+
 #home {
   max-width: 100%;
   background: url(img/bg-home.png) no-repeat center center #00519f;
@@ -395,11 +377,6 @@ section h3 {
   height: 100vh;
   margin: 0;
   padding-top: 0;
-}
-
-#home img.logo {
-  width: 85px;
-  height: auto;
 }
 
 #home article {
@@ -566,6 +543,49 @@ section h3 {
   margin-bottom: 0;
 }
 
+#contact .bio {
+  width: 470px;
+  margin: 0 auto 22px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+#contact .bio div {
+  margin: 0 0 0 18px;
+}
+
+#contact .bio div h4 {
+  padding: 0;
+  font-size: 2.4rem;
+}
+
+#contact .soc-icons {
+  margin: 0 auto 62px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 470px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+#contact .soc-icons i {
+  color: #0f6590;
+  font-size: 2.4rem;
+  border: 1px solid rgba(3, 84, 144, 0.9);
+  border-radius: 50%;
+  border-radius: 50%;
+  padding: 18px;
+  width: 62px;
+  height: 62px;
+  text-align: center;
+}
+
 #contact .octopus {
   position: absolute;
   right: -1000px;
@@ -576,68 +596,32 @@ section h3 {
 
 #contact .angler {
   opacity: 30%;
-  width: 170px;
+  width: 150px;
   height: auto;
   -webkit-animation: pulse 8s infinite;
   animation: pulse 8s infinite;
 }
 
-#contact form {
-  margin: 0 auto;
-  width: 500px;
-  text-align: left;
-}
-
-#contact form .flex-input {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-#contact form input {
-  border-radius: 4px;
-  padding: 1rem;
-  color: #E2E0E0;
-  width: 220px;
-  background: #002950;
-  border: 1px solid rgba(3, 84, 144, 0.9);
-}
-
-#contact form textarea {
-  width: 480px;
-  padding: 1rem;
-  background: #002950;
-  border: 1px solid rgba(3, 84, 144, 0.9);
-  border-radius: 4px;
-  color: #E2E0E0;
-}
-
-#contact form label {
+#contact .button {
   display: block;
-}
-
-#contact form button {
-  display: block;
-  background: #002950;
   color: #fff;
   border: 1px solid rgba(3, 84, 144, 0.9);
-  border-radius: 30px;
   text-align: center;
   padding: 1rem 4.2rem;
-  cursor: pointer;
   font-size: 1.6rem;
+  width: 260px;
+  font-weight: 200;
+  border-radius: 6px;
+  margin: 0 auto;
 }
 
-#contact form span {
-  display: block;
-  margin: 1rem;
+#contact .button:hover {
+  background: #012f5a;
 }
 
-#contact form span.msg {
-  margin-bottom: 30px;
+#contact .button i {
+  padding: 0 .5rem;
+  color: #0f6590;
 }
 
 .lt h3, .lt p {
@@ -691,6 +675,7 @@ section h3 {
 
 footer {
   width: 100%;
+  height: 140px;
   padding: 1em 0 4em;
 }
 
@@ -791,10 +776,6 @@ footer .bioInfo img {
   border-radius: 50%;
 }
 
-footer.sm {
-  height: 50px;
-}
-
 .logoBrand {
   border-top: 1px solid #1293e4;
   margin: 54px 0;
@@ -841,6 +822,13 @@ footer.sm {
   #content {
     padding: 0rem;
   }
+  #content .bio {
+    display: block;
+    width: auto;
+  }
+  #content .soc-icons {
+    width: auto;
+  }
   section {
     padding: 1.225em;
     height: auto;
@@ -859,8 +847,11 @@ footer.sm {
     width: auto;
     margin: 0 0 3.2rem;
   }
+  section .title p {
+    font-size: 1.4rem;
+  }
   section h3 {
-    font-size: 2.8rem;
+    font-size: 2.4rem;
     line-height: 1.2em;
   }
   section h4 {
@@ -947,6 +938,9 @@ footer.sm {
   #contact {
     background-position: 0 50px;
     background-size: 120px;
+  }
+  #contact .bio div {
+    padding-top: 2.4rem;
   }
   #contact .octopus {
     /* right: -1000px; */
