--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -61,7 +61,7 @@
                 }
             }
             h3 {
-                font-size: 2.4rem;
+                font-size: 3rem;
                 line-height: 1.2em;
             }
             h4 {
@@ -169,7 +169,8 @@
             background-size:120px;
             .button {
                 display:block;
-                margin:2em auto;            
+                margin:2em auto; 
+                width: 100%;           
             }
             form {width:auto;
                 margin:0 1.8rem;
