--- a/css/_header.scss
+++ b/css/_header.scss
@@ -73,7 +73,7 @@ nav {
 		font-size: 1.4rem;
 		line-height: 1.6em;
 		margin-left: 3.2rem;
-		color:$color_link;
+		color:$color_bon_jour;
 		display: inline-flex;
 		flex-direction: column;
 		align-items: center;
