--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -186,10 +186,9 @@ img.logo {
 	.bio {
 		width:470px;
 		margin:0 auto 22px;
-		display: flex;
-		align-items: flex-start;
+		text-align: center;
 		div {
-			margin:0 0 0 18px;
+			margin:2.8rem 0;
 			h4 {
 				padding:0;
 				font-size:2.4rem;
