--- a/css/_master.scss
+++ b/css/_master.scss
@@ -3,7 +3,7 @@
 //colors
 $color_nav_mobi: rgba(7, 63, 122, 0.7);
 $color_cape_cod: #424141;
-$color_link: #cce4ec;
+$color_link: #1293e4;
 $white: #fff;
 $color_bon_jour: #c0d4e6;
 $color_light_grey: #E2E0E0;
@@ -11,13 +11,13 @@ $black: #000000;
 $color_olivine: #2588b9;
 $color_calypso: #1293e4;
 $color_splash_page: #00519f;
-$color_venice_blue: rgba(3, 84, 144, 0.9);
+$color_venice_blue: #1293e4;
 $color_nobel: #8a8888;
 $color_aqua: #9FDAF2;
 $color_logo-bg:#0f6590;
 $color_fab: #c0dbea;
 $color_navy: #012f5a;
-$color_text: #8fb6da;
+$color_text: #585858;
 
 //sizing
 $size_100: 100%;
@@ -27,7 +27,7 @@ $vh: calc(100vh - 54px);
 //fonts
 $font_1: sans-serif;
 $font_2: Open +Sans;
-$font_3:'Nunito', sans-serif;
+$font_3:'Fira Sans', sans-serif;
 
 //urls
 $url_0: url(img/bg-home.png);
@@ -40,7 +40,7 @@ $url_2: url(img/bg-footer.jpg);
 	font-family: $font_3;
 	margin: 0;
 	padding: 0;
-	color: $color_light_grey;
+	color: $color_venice_blue;
 	display:block;
 	letter-spacing:-.05rem;
 }
