--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -23,6 +23,7 @@
        .inner {
             display: flex;
             justify-content: space-between;
+            align-items: center;
             }
         } 
     }
