--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -25,15 +25,16 @@ section {
 	}
 	.title {
 		text-align: center;
-		margin:0 auto 5.6em;
+		margin:0 auto 0;
+		padding:5.6rem 0 5.6em;
 		display:block;
 		p {
 			font-size:1.8rem;
 		}
 	}
 	h3 {
-		font-size:3.6rem;
-		font-weight: 600;
+		font-size:3.2rem;
+		font-weight: 400;
 		padding:1.8rem 0 0;
 	}
 }
@@ -100,6 +101,13 @@ img.logo {
 
 //About Section
 
+#interior {
+	height:65px;
+	margin:0;
+	padding:0;
+	background: linear-gradient(162deg, #07a2f3 0%, #066fd2 100%);
+}
+
 #about {
 	.title {
 	.jellyfish {
@@ -141,32 +149,26 @@ img.logo {
 	}
 }
 
-#portfolio {
-	background: url(img/img-mermaid.png) no-repeat 10% 0;
-	background-size:400px auto;
-	animation: animatedBackground 20s linear ;
-	@keyframes animatedBackground {
-		from { background-position: 0 0; }
-		to { background-position: 10% 0; }
-	}
-
+	#portfolio {
+	margin:0;
+		}
 
 	.grid {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
 		grid-template-rows: auto;
-		grid-row-gap: 4rem;
-		grid-column-gap: 1rem;
+		grid-row-gap: 2rem;
+		grid-column-gap: 2rem;
 		.item {
-			background-color: $color_navy;
+			background-color:#fff;
 			padding:3.2rem 3.2rem 2rem;
 			border-radius:4px;
+			box-shadow: 0 0 8px #e2e1e1;
 		}
 
 		p {
 			font-weight: 600;
 			padding: .8rem 0 0;
-			color: $white;
 		}
 		 img {
 			opacity: 90%;
@@ -179,20 +181,29 @@ img.logo {
 			}
 		}
 	}
-}
+
 //Contact Pages
 
 #contact {
+	overflow: hidden;
+	margin-bottom: 0;
 	.bio {
-		width:470px;
-		margin:0 auto 22px;
-		text-align: center;
-		div {
-			margin:2.8rem 0;
-			h4 {
-				padding:0;
-				font-size:2.4rem;
-			}
+	display:flex;
+	margin:0 0 3rem;
+	background: #fff;
+    border-radius: 6px;
+    box-shadow: 0 0 8px #e4e3e3;
+    justify-content: space-between;
+	p {
+		padding:0;
+	}
+		.label {
+		flex:0 0 25%;
+		text-align:right;
+		}
+		.copy {
+			padding:1.4rem;
+			flex:0 0 25%;
 		}
 	}
 	.soc-icons {
@@ -213,23 +224,8 @@ img.logo {
 		}
 
 	}
-	overflow: hidden;
-	margin-bottom: 0;
-	.octopus {
-		position: absolute;
-		right: -1000px;
-		top: 0;
-		-webkit-animation: pulse 4s infinite;
-    	animation: pulse 4s infinite;
-	}
-	.angler {
-		opacity: 30%;
-		width: 150px;
-		height: auto;
-		-webkit-animation: pulse 8s infinite;
-    	animation: pulse 8s infinite;
-	}
-	
+
+
 		.button {
 			display: block;
 			color: #fff;
