--- a/css/_base.scss
+++ b/css/_base.scss
@@ -1,4 +1,81 @@
 @charset "UTF-8";
+
+// Functions, Variables, Mixins
+
+//colors
+$color_nav_mobi: rgba(7, 63, 122, 0.7);
+$color_cape_cod: #424141;
+$color_link: #1293e4;
+$white: #fff;
+$color_bon_jour: #c0d4e6;
+$color_light_grey: #f7f7f7;
+$black: #000000;
+$color_olivine: #2588b9;
+$color_calypso: #1293e4;
+$color_splash_page: #00519f;
+$color_venice_blue: #1293e4;
+$color_nobel: #8a8888;
+$color_aqua: #9FDAF2;
+$color_logo-bg:#0f6590;
+$color_fab: #c0dbea;
+$color_navy: #012f5a;
+$color_text: #585858;
+
+//sizing
+$size_100: 100%;
+$size_50: 50%;
+$vh: calc(100vh - 54px);
+
+//fonts
+$font_1: sans-serif;
+$font_2: Open +Sans;
+$font_3:'Fira Sans', sans-serif;
+
+//urls
+$url_0: url(img/bg-home.png);
+$url_2: url(img/bg-footer.jpg);
+
+//@extend-elements
+//original selectors
+//h1, h2, h3, h4, h5
+%extend_1 {
+	font-family: $font_3;
+	margin: 0;
+	padding: 0;
+	color: $color_venice_blue;
+	display:block;
+	letter-spacing:-.05rem;
+}
+
+//original selectors
+//em, a, ul, p, strong
+%extend_2 {
+	font-family: $font_2, $font_1;
+	margin: 0;
+	padding: 0;
+	color: $color_text;
+	line-height: 1.4em;
+}
+
+//Mixins
+@mixin btn_fade {
+	@include ease;
+	-webkit-transition: all .5s ease;
+    }
+@mixin ease {
+	transition: all .9s ease;
+    }
+@mixin shadow {
+    box-shadow: 0 6px 6px #e2dfdf;
+    }
+@mixin bsi {
+    box-sizing: inherit;
+    }
+@mixin center {
+    transform: translate(-50%, -50%);
+	}
+
+
 html {
 	box-sizing:border-box;
 	font-size: 62.5%;
@@ -12,29 +89,26 @@ html {
 }
 * {
 	box-sizing: border-box;
-  }body {
+  }
+  body {
 	-webkit-font-smoothing:antialiased;
 	font-size: 1.6rem;
 	background: $color_light_grey;
 	margin: 0;
 	padding: 0;
 	color: $white;
-	height: 100%;
+	position:relative;
+	height:100%;
 }
 section {
-	margin:0 auto 14rem;
+	margin:0 auto 0;
 	padding:0 3.4rem;
 	position: relative;
 }
 article {
 	padding:0;
-	margin:0 auto;
+	margin:0 auto 4rem;
 	max-width: 1140px;
-	h3 {
-		font-size:4.8rem;
-		padding:18px 0;
-		font-weight:400;
-	}
 		
 	}
 	.fas {
@@ -56,11 +130,13 @@ article {
 }
 #wrapper {
 	width: $size_100;
-	height: $size_100;
 	position: relative;
+	height:100%;
 }
 #content {
-background: #F7F7F7;
+	padding:0;
+	margin:0;
+	min-height:100%;
 }
 //Animation Left
 
