--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -32,14 +32,9 @@ section {
 			font-size:1.8rem;
 		}
 	}
-	h3 {
-		font-size:3.2rem;
-		font-weight: 400;
-		padding:1.8rem 0 0;
-	}
 }
 img.logo {
-	width:85px;
+	width:75px;
 	height: auto;
 }
 //Splash Pag/
@@ -102,21 +97,14 @@ img.logo {
 //About Section
 
 #interior {
-	height:65px;
+	height:100px;
 	margin:0;
 	padding:0;
-	background: linear-gradient(162deg, #07a2f3 0%, #066fd2 100%);
+	background: #0080C9;
 }
 
 #about {
-	.title {
-	.jellyfish {
-		width:150px;
-		height:auto;
-		-webkit-animation: pulse 5s infinite;
-    	animation: pulse 5s infinite;
-	}
-	}
+	margin-bottom:4rem;
 	article {
 		display: grid;
 		grid-template-columns: repeat(2, 50%);
@@ -185,7 +173,6 @@ img.logo {
 //Contact Pages
 
 #contact {
-	overflow: hidden;
 	margin-bottom: 0;
 	.bio {
 	display:flex;
@@ -193,12 +180,13 @@ img.logo {
 	background: #fff;
     border-radius: 6px;
     box-shadow: 0 0 8px #e4e3e3;
-    justify-content: space-between;
+	justify-content: space-between;
+	align-items: center;
 	p {
 		padding:0;
 	}
 		.label {
-		flex:0 0 25%;
+		flex:0 0 15%;
 		text-align:right;
 		}
 		.copy {
@@ -226,8 +214,9 @@ img.logo {
 	}
 
 
-		.button {
+		.btn {
 			display: block;
+			background:#02ADF0;
 			color: #fff;
 			border: 1px solid $color_venice_blue;
 			text-align: center;
@@ -248,16 +237,6 @@ img.logo {
 		}
 
 	}
-
-.lt {
-	h3, p {
-		color:$white;
-	}
-	.button {
-		background:none;
-		color:white;
-	}
-}
 	
 //Keyframes for Anchor
 
