--- a/css/global.css
+++ b/css/global.css
@@ -79,29 +79,24 @@ html {
 body {
   -webkit-font-smoothing: antialiased;
   font-size: 1.6rem;
-  background: #E2E0E0;
+  background: #f7f7f7;
   margin: 0;
   padding: 0;
   color: #fff;
+  position: relative;
   height: 100%;
 }
 
 section {
-  margin: 0 auto 14rem;
+  margin: 0 auto 0;
   padding: 0 3.4rem;
   position: relative;
 }
 
 article {
   padding: 0;
-  margin: 0 auto;
+  margin: 0 auto 4rem;
   max-width: 1140px;
-}
-
-article h3 {
-  font-size: 4.8rem;
-  padding: 18px 0;
-  font-weight: 400;
 }
 
 .fas {
@@ -125,12 +120,14 @@ article h3 {
 
 #wrapper {
   width: 100%;
-  height: 100%;
   position: relative;
+  height: 100%;
 }
 
 #content {
-  background: #F7F7F7;
+  padding: 0;
+  margin: 0;
+  min-height: 100%;
 }
 
 h1 {
@@ -139,13 +136,16 @@ h1 {
 }
 
 h2 {
-  font-size: 2.6rem;
+  font-size: 3.6rem;
   line-height: 1em;
   padding: 0 0 .4em;
 }
 
+h3 {
+  font-size: 2.4rem;
+}
+
 h4 {
-  padding: 0;
   font-size: 2.4rem;
 }
 
@@ -213,8 +213,20 @@ header .inner {
 }
 
 nav {
-  margin: 0;
-  padding-top: 1rem;
+  margin: 2rem 0 0;
+  padding: 2px 0 0;
+}
+
+nav .btn {
+  background: #02ADF0;
+  color: #fff;
+  border: 1px solid #1293e4;
+  text-align: center;
+  padding: 1rem 4.2rem;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  border-radius: 20px;
 }
 
 nav a {
@@ -297,14 +309,8 @@ section .title p {
   font-size: 1.8rem;
 }
 
-section h3 {
-  font-size: 3.2rem;
-  font-weight: 400;
-  padding: 1.8rem 0 0;
-}
-
 img.logo {
-  width: 85px;
+  width: 75px;
   height: auto;
 }
 
@@ -371,17 +377,14 @@ img.logo {
 }
 
 #interior {
-  height: 65px;
+  height: 100px;
   margin: 0;
   padding: 0;
-  background: linear-gradient(162deg, #07a2f3 0%, #066fd2 100%);
+  background: #0080C9;
 }
 
-#about .title .jellyfish {
-  width: 150px;
-  height: auto;
-  -webkit-animation: pulse 5s infinite;
-  animation: pulse 5s infinite;
+#about {
+  margin-bottom: 4rem;
 }
 
 #about article {
@@ -465,7 +468,6 @@ img.logo {
 }
 
 #contact {
-  overflow: hidden;
   margin-bottom: 0;
 }
 
@@ -481,6 +483,9 @@ img.logo {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #contact .bio p {
@@ -489,8 +494,8 @@ img.logo {
 
 #contact .bio .label {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 25%;
-          flex: 0 0 25%;
+      -ms-flex: 0 0 15%;
+          flex: 0 0 15%;
   text-align: right;
 }
 
@@ -524,8 +529,9 @@ img.logo {
   text-align: center;
 }
 
-#contact .button {
+#contact .btn {
   display: block;
+  background: #02ADF0;
   color: #fff;
   border: 1px solid #1293e4;
   text-align: center;
@@ -538,22 +544,13 @@ img.logo {
   margin: 0 auto;
 }
 
-#contact .button:hover {
+#contact .btn:hover {
   background: #012f5a;
 }
 
-#contact .button i {
+#contact .btn i {
   padding: 0 .5rem;
   color: #0f6590;
-}
-
-.lt h3, .lt p {
-  color: #fff;
-}
-
-.lt .button {
-  background: none;
-  color: white;
 }
 
 @-webkit-keyframes pulse {
@@ -597,11 +594,12 @@ img.logo {
 }
 
 footer {
-  background: #F2F2F2;
-  border-top: 1px solid #8ACAE3;
   width: 100%;
-  padding: 0;
+  padding: 0 0 1rem;
   margin: 4rem 0 0;
+  background: #F2F2F2;
+  border-top: 1px solid #b0e0f3;
+  height: 70px;
 }
 
 footer section {
@@ -633,23 +631,29 @@ footer .inner {
   display: flex;
 }
 
+footer .inner .logo {
+  margin-right: 120px;
+}
+
+footer .inner .logo img {
+  width: 60px;
+  height: auto;
+}
+
 footer .inner .social-media {
-  min-width: 20%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 10%;
+          flex: 1 0 10%;
 }
 
 footer .inner i {
-  color: #0C9CD5;
+  color: #1293e4;
   font-size: 2.4rem;
+  padding: 0 2.4rem;
 }
 
 footer .inner .contact-info i {
-  color: #0C9CD5;
+  color: #45c3f5;
   padding: 0 .4rem 0 0;
   font-size: 1.4rem;
 }
@@ -745,8 +749,20 @@ footer .bioInfo img {
   left: 50%;
 }
 
+@media (max-width: 1140px) {
+  #contact .bio .copy {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 30%;
+            flex: 0 0 30%;
+  }
+}
+
+/* Ipad landscape */
 @media (max-width: 1024px) {
-  header .inner {
+  #home {
+    background-attachment: scroll;
+  }
+  header .inner, footer .inner {
     max-width: 1024px;
     margin: 0 1.5rem;
   }
@@ -756,8 +772,21 @@ footer .bioInfo img {
   #about .title {
     max-width: 100%;
   }
+  #contact .bio {
+    display: block;
+    text-align: center;
+    padding-top: 2.4rem;
+  }
+  #contact .bio .label {
+    display: block;
+    text-align: center;
+  }
+  footer .inner .logo {
+    margin-right: 50px;
+  }
 }
 
+/* Mobile Display */
 @media (min-width: 768px) {
   footer .inner {
     display: -webkit-box;
@@ -776,6 +805,13 @@ footer .bioInfo img {
   p, a, em, ul, strong, form input, form textarea, form labelp, a, em, ul, strong, form input, form textarea, form label {
     font-size: 1.4rem;
   }
+  header .inner {
+    max-width: 100%;
+    position: relative;
+    margin: 0;
+    display: block;
+    text-align: center;
+  }
   #content {
     padding: 0rem;
   }
@@ -791,7 +827,6 @@ footer .bioInfo img {
     height: auto;
     margin: 4.2rem 0;
     padding: 0;
-    text-align: center;
   }
   section article {
     padding: 0 1.8rem;
@@ -823,7 +858,7 @@ footer .bioInfo img {
   }
   #home h1 {
     line-height: 1.2em;
-    font-weight: 100;
+    font-weight: 400;
     font-size: 3.2rem;
     padding: 2rem;
   }
@@ -843,18 +878,25 @@ footer .bioInfo img {
     margin: 0;
   }
   #about article {
-    display: block;
+    -ms-grid-columns: (100%)[1];
+        grid-template-columns: repeat(1, 100%);
+    -ms-grid-rows: (1fr)[4];
+        grid-template-rows: repeat(4, 1fr);
+    grid-row-gap: 2rem;
   }
   #about article aside {
     margin: 0 0 3rem;
+  }
+  #about article aside:nth-child(3) {
+    -ms-grid-row: 4;
+    grid-row: 4;
   }
   #about .title {
     width: auto;
     background-position: 30px 50px;
     background-size: 100px;
-  }
-  #about .fish, #about .turtle {
-    display: none;
+    margin: 0;
+    padding: 2.4rem 0;
   }
   #portfolio {
     background: none;
@@ -895,9 +937,6 @@ footer .bioInfo img {
   #contact {
     background-position: 0 50px;
     background-size: 120px;
-  }
-  #contact .bio div {
-    padding-top: 2.4rem;
   }
   #contact .octopus {
     /* right: -1000px; */
@@ -963,12 +1002,6 @@ footer .bioInfo img {
   #mobileNav a span {
     display: block;
   }
-  header .inner {
-    max-width: 100%;
-    position: relative;
-    margin: 0;
-    display: block;
-  }
   .page .scrnshts, .page .screens {
     display: block;
   }
@@ -987,7 +1020,7 @@ footer .bioInfo img {
   footer {
     margin: 0;
     height: auto;
-    padding-bottom: 80px;
+    padding: 0;
   }
   footer .bioInfo {
     width: 100%;
@@ -1001,8 +1034,21 @@ footer .bioInfo img {
     padding: 0 0 2em;
   }
   footer .inner {
-    margin: 1.4em;
+    margin: 0 1.4rem 1.4rem;
     text-align: center;
+    display: block;
+  }
+  footer .inner p, footer .inner a {
+    display: block;
+    padding: 0 0 1.4rem;
+  }
+  footer .inner .social-media {
+    padding: 0 0 2.4rem;
+  }
+  footer .inner .logo {
+    margin: 0;
+    padding: 0 0 2.4rem;
+    display: block;
   }
   footer .btn {
     margin: 20px auto;
@@ -1029,11 +1075,5 @@ footer .bioInfo img {
   .page .secondary .scrnshts {
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (max-device-width: 1024px) {
-  #home {
-    background-attachment: scroll;
   }
 }
